minor fixes on mobile

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -27,7 +27,7 @@ html, body {
 }
 
 body {
-  background-color: #dae3f56c; /* Replace with your desired color */
+  background-color: #ebf0ffd8; /* Replace with your desired color */
   margin: 0; /* Remove default body margin */
   padding: 0; /* Remove default body padding */
   font-family: Arial, sans-serif; /* Optional: set a font for consistency */
